# vx

releases/01/ios/vx-app.app/: embedded.mobileprovision
releases/01/ios/vx-app.app/_CodeSignature/: CodeResources
releases/01/mac-os/vx.component/Contents/: Info.plist
releases/01/mac-os/vx.vst3/Contents/Resources/: moduleinfo.json
releases/01/rs/resources/: about.md
releases/01/rs/source/modules/eqe/: module.eqe.PresetSupport.cpp  module.eqe.Processor.cpp  module.eqe.Processor.h  module.eqe.SlopeMapping.cpp
releases/01/rs/source/modules/mxe/: module.mxe.DspCore.cpp  module.mxe.DspCoreProcessing.cpp  module.mxe.DspSupport.h  module.mxe.EditorPages.cpp  module.mxe.EditorTheme.cpp  module.mxe.EditorTheme.h  module.mxe.HostParameterEditing.cpp  module.mxe.ModuleComponent.cpp  module.mxe.ModuleComponent.h  module.mxe.MultibandProcessor.h  module.mxe.ParameterIds.cpp  module.mxe.PluginParameters.h  module.mxe.PluginProcessor.cpp  module.mxe.PluginProcessorParameters.cpp
releases/01/rs/source/modules/spe/: module.spe.SpeShared.h  module.spe.SpectralCompressor.cpp
releases/01/rs/source/modules/tse/: module.tse.Component.h
releases/01/rs/source/shell/: IosHostMain.cpp  shell.BellSection.cpp  shell.ControlsButton.cpp  shell.Editor.h  shell.EditorControls.h  shell.EditorParameterControls.h  shell.EditorStyle.h  shell.History.cpp  shell.Layout.cpp  shell.LayoutEqe.cpp  shell.LayoutFrames.cpp  shell.LayoutSpe.cpp  shell.LayoutState.cpp  shell.Lifecycle.cpp  shell.LookAndFeel.cpp  shell.ModuleTabs.cpp  shell.PluginFactory.cpp  shell.ProcessorParameters.cpp  shell.Setup.cpp  shell.SetupConstructor.cpp  shell.SetupEqe.cpp  shell.SetupShellControls.cpp  shell.SetupSpe.cpp  shell.SetupVisualizerControls.cpp  shell.State.cpp  shell.StateBellOrder.cpp
releases/01/vx-app.app/: Info.plist
releases/01/vx-app.app/PlugIns/vx.appex/: embedded.mobileprovision
releases/01/vx.vst3/Contents/: Info.plist
releases/02/ios/vx.app/: Info.plist
releases/02/ios/vx.app/PlugIns/vx.appex/: Info.plist
releases/02/ios/vx.app/_CodeSignature/: CodeResources
releases/02/mac-os/vx.vst3/Contents/_CodeSignature/: CodeResources
releases/02/rs/source/modules/eqe/: module.eqe.Defaults.cpp  module.eqe.Labels.cpp  (+4 more)
releases/02/rs/source/shared/: shared.TransientSplit.h  shared.UiParameterControls.h  shared.UiStyle.h
releases/02/rs/source/shell/: shell.BellSection.cpp  shell.Constants.h  shell.ControlsButton.cpp  shell.ControlsValueBox.cpp  shell.Editor.h  shell.EditorBellSection.h  shell.EditorControls.h  shell.EditorParameterControls.h  shell.EditorPresetSections.h  shell.EditorStyle.h  shell.History.cpp  shell.Layout.cpp  shell.LayoutEqe.cpp  shell.LayoutSpe.cpp  shell.LayoutState.cpp  shell.Lifecycle.cpp  shell.ModuleTabs.cpp  shell.ParameterControls.cpp  shell.Processor.h  shell.ProcessorChainState.cpp  shell.ProcessorParameters.cpp  shell.ProcessorRuntime.cpp  shell.Prompts.cpp  shell.Setup.cpp  shell.SetupConstructor.cpp  shell.SetupEqe.cpp  shell.SetupPresets.cpp  shell.SetupShellControls.cpp  shell.SetupSpe.cpp  shell.SetupSupport.h  shell.SetupVisualizer.cpp  shell.ShellState.cpp  shell.ShellState.h  shell.SpeEditorState.cpp  shell.State.cpp  shell.StatePresets.cpp  shell.Style.cpp
resources/: about.md
source/: IosHostMain.cpp
source/editor/: ParameterControls.cpp  Prompts.cpp  Setup.cpp  State.cpp  Style.cpp
source/headers/: EditorBellSection.h  EditorParameterControls.h  EditorStyle.h  ProcessorSupport.h
source/modules/eqe/: module.eqe.AppGroupStorage.mm  module.eqe.FilterDesign.cpp  module.eqe.FilterSections.cpp  module.eqe.FilterUpdate.cpp  module.eqe.ParameterText.cpp  module.eqe.Processor.cpp  module.eqe.ProcessorState.cpp  module.eqe.ProcessorSupport.h  module.eqe.ProcessorVisualiser.cpp
source/modules/eqe/editor/: BellSection.cpp  Controls.cpp  Layout.cpp  Lifecycle.cpp  PresetSections.cpp
source/modules/eqe/headers/: Editor.h  EditorControls.h  EditorPresetSections.h  Processor.h
source/modules/eqe/processor/: Defaults.cpp  FilterDesign.cpp  FilterSections.cpp  FilterUpdate.cpp  Labels.cpp  ParameterText.cpp  PresetFiles.cpp  Runtime.cpp
source/modules/mxe/: module.mxe.DspCore.h  module.mxe.DspCoreProcessing.cpp  module.mxe.DspCoreState.cpp  module.mxe.EditorControlSpecs.h  module.mxe.EditorControls.cpp  module.mxe.EditorControls.h  module.mxe.EditorPages.cpp  module.mxe.EditorSection.cpp  module.mxe.EditorTheme.h  module.mxe.EditorUiState.h  module.mxe.HostParameterEditing.h  module.mxe.ModuleComponent.cpp  module.mxe.MultibandCrossover.h  module.mxe.MultibandProcessor.cpp  module.mxe.ParameterIds.h  module.mxe.PluginParameters.cpp  module.mxe.PluginParameters.h  module.mxe.PluginProcessor.h
source/modules/spe/: module.spe.ProcessorConstants.h  module.spe.SpeProcessor.cpp  module.spe.SpeProcessor.h  module.spe.SpeProcessorParameters.cpp
source/modules/tse/: module.tse.Component.cpp  module.tse.TseProcessor.cpp  module.tse.TseProcessor.h
source/processor/: AppGroupStorage.mm  Parameters.cpp  PluginFactory.cpp  SlopeMapping.cpp  State.cpp
source/shared/: shared.UiConstants.h  shared.UiControls.h
source/shell/: shell.Constants.h  shell.Controls.cpp  shell.ControlsValueBox.cpp  shell.Editor.h  shell.EditorBellSection.h  shell.History.cpp  shell.Layout.cpp  shell.LayoutFrames.cpp  shell.LayoutState.cpp  shell.ModuleTabs.cpp  shell.ParameterControls.cpp  shell.PresetSections.cpp  shell.Processor.h  shell.ProcessorChainState.cpp  shell.ProcessorEditor.cpp  shell.ProcessorParameters.cpp  shell.ProcessorRuntime.cpp  shell.ProcessorState.cpp  shell.SetupConstructor.cpp  shell.SetupShellControls.cpp  shell.ShellState.cpp  shell.SpeEditorState.cpp  shell.State.cpp  shell.Style.cpp
temp/: CMakeLists.txt  Vx_AUv3.entitlements.in  Vx_iOSHostInfo.plist.in  build-ios-app_auv3.command  build-ios-device.command  build-ios-simulator.command  build-macos-au.command  build-macos-vst3.command  post-build-ios-app_auv3.command  post-build-ios-device.command  post-build-ios-simulator.command  post-build-macos-au.command  post-build-macos-vst3.command  rules_builds.md  vx.md
(+34 files in other folders)
